<resources>
    <string name="app_name">Propster.io</string>
    <string name="app_slogan">Automate Your Property Assets</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirmed_password">Confirmed Password</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="back">Back</string>
    <string name="copyright">Copyrighted by PROPSTER.IO</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="landlord">Landlord</string>
    <string name="tenant">Tenant</string>
    <string name="add_property">Add Asset</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="skip">Skip</string>
    <string name="properties">Assets</string>
    <string name="logout">Logout</string>
    <string name="empty">Empty</string>
    <string-array name="title">
        <item>Mr</item>
        <item>Ms/Mrs</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="is_business">
        <item>Personal</item>
        <item>Company</item>
    </string-array>
    <string-array name="add_tenant_type">
        <item>Scan QR Code</item>
        <item>Non-existing Tenant</item>
    </string-array>
    <string-array name="add_property_type">
        <item>Show QR Code</item>
        <item>Non-existing Asset</item>
    </string-array>
    <string name="property_type">Asset Type</string>
    <string-array name="ownership_type">
        <item>Freehold</item>
        <item>Leasehold</item>
    </string-array>
    <string-array name="loan_is_active">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="salary_range">Salary Range</string>
    <string name="email_label">Email:</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="title_label">Title:</string>
    <string name="first_name_label">First Name (Given Name):</string>
    <string name="last_name_label">Last Name (Surname):</string>
    <string name="date_of_birth_label">Date of Birth:</string>
    <string name="is_business_label">Personal/Company:</string>
    <string name="gender_label">Gender:</string>
    <string name="switch_role">Change Role</string>
    <string name="switch_role_to_tenant">Switch Role To Tenant</string>
    <string name="switch_role_to_landlord">Switch Role To Landlord</string>
    <string name="salary_range_1_to_5000">RM1 to RM5000</string>
    <string name="salary_range_5001_to_10000">RM5001 to RM10000</string>
    <string name="salary_range_above_10000">Above RM10000</string>
    <string name="select_your_role">Select Your Role</string>
    <string name="first_time_login_as_landlord">First time login as landlord?</string>
    <string name="first_time_login_as_tenant">First time login as tenant?</string>
    <string name="user">User</string>
    <string name="user_profile">User Profile</string>
    <string name="notification">Notification</string>
    <string name="dashboard">Dashboard</string>
    <string name="report">Report</string>
    <string name="manage">Manage</string>
    <string name="community">Community</string>
    <string name="more">More</string>
    <string name="property_expenses">Asset Expenses</string>
    <string name="payment_records">Payment Records</string>
    <string name="tenants">Tenants</string>
    <string name="tenure_contracts">Tenure Contracts</string>
    <string name="remove_property">Remove Asset</string>
    <string name="remove_tenant">Remove Tenant</string>
    <string name="property_detail">Asset Detail</string>
    <string name="property_name">Asset Nickname</string>
    <string name="unit_name">Unit No</string>
    <string name="floor">Floor</string>
    <string name="address_line_1">Address Line</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="current_occupancy">Current Occupancy</string>
    <string name="multi_unit_property">Multi Unit Asset</string>
    <string name="no_of_bedroom">No of Bedroom</string>
    <string name="no_of_bath">No of Bath</string>
    <string name="assets_type">Assets Type</string>
    <string name="assets_ownership_type">Assets Ownership Type</string>
    <string name="total_area">Total Area</string>
    <string name="purchase_value">Purchased Value</string>
    <string name="purchase_tax">Purchase Tax</string>
    <string name="current_value">Current Value</string>
    <string name="purchase_date">Purchased Date</string>
    <string name="under_loan">Under Loan</string>
    <string name="loan_interest_rate">Loan Interest Rate</string>
    <string name="down_payment">Down Payment</string>
    <string name="remaining_amount_of_loan">Remaining Amount of Loan</string>
    <string name="remaining_term_of_loan">Remaining Term of Loan</string>
    <string name="latest_rental_date">Latest Rental Date</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="number_of_bathrooms">Number of Bathrooms</string>
    <string name="property_size">Asset Size (sq. ft.)</string>
    <string name="property_ownership_type">Asset Ownership Type</string>
    <string name="is_loan_active">Is Loan Active</string>
    <string name="outstanding_amount">Loan Outstanding Amount</string>
    <string name="total_year">Total Year</string>
    <string name="malaysia">Malaysia</string>
    <string name="property_name_label">Asset Nickname:</string>
    <string name="unit_name_label">Unit No:</string>
    <string name="floor_label">Floor:</string>
    <string name="address_line_1_label">Address Line:</string>
    <string name="address_line_2_label">Address Line 2:</string>
    <string name="city_label">City:</string>
    <string name="postcode_label">Postcode:</string>
    <string name="state_label">State:</string>
    <string name="country_label">Country:</string>
    <string name="current_occupancy_label">Current Occupancy:</string>
    <string name="multi_unit_property_label">Multi Unit Asset:</string>
    <string name="no_of_bedroom_label">No of Bedroom:</string>
    <string name="no_of_bath_label">No of Bath:</string>
    <string name="assets_type_label">Assets Type:</string>
    <string name="assets_ownership_type_label">Assets Ownership Type:</string>
    <string name="total_area_label">Total Area:</string>
    <string name="purchase_value_label">Purchased Value:</string>
    <string name="purchase_tax_label">Purchase Tax:</string>
    <string name="current_value_label">Current Value:</string>
    <string name="purchase_date_label">Purchased Date:</string>
    <string name="under_loan_label">Under Loan:</string>
    <string name="loan_interest_rate_label">Loan Interest Rate:</string>
    <string name="down_payment_label">Down Payment:</string>
    <string name="remaining_amount_of_loan_label">Remaining Amount of Loan:</string>
    <string name="remaining_term_of_loan_label">Remaining Term of Loan:</string>
    <string name="latest_rental_date_label">Latest Rental Date:</string>
    <string name="number_of_rooms_label">Number of Rooms:</string>
    <string name="number_of_bathrooms_label">Number of Bathrooms:</string>
    <string name="property_size_label">Asset Size (sq. ft.):</string>
    <string name="property_type_label">Asset Type:</string>
    <string name="property_ownership_type_label">Asset Ownership Type:</string>
    <string name="is_loan_active_label">Is Loan Active:</string>
    <string name="outstanding_amount_label">Loan Outstanding Amount:</string>
    <string name="total_year_label">Total Year (Loan):</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="tenant_name_label">Tenant Name:</string>
    <string name="salary_range_label">Salary Range:</string>
    <string name="add_property_expenses">Add Asset Expenses</string>
    <string name="property_expenses_payment_description">Expense Description</string>
    <string name="property_expenses_property_name">Asset Nickname</string>
    <string name="property_expenses_sender_type">Sender Type</string>
    <string name="property_expenses_sender_name">Sender Name</string>
    <string name="property_expenses_recipient_type">Recipient Type</string>
    <string name="property_expenses_recipient_name">Recipient Name</string>
    <string name="property_expenses_expense_type">Expense Type</string>
    <string name="property_expenses_expense_method">Expense Method</string>
    <string name="property_expenses_vendor_name">Vendor Name</string>
    <string name="property_expenses_currency">RM</string>
    <string name="property_expenses_amount">Amount</string>
    <string name="property_expenses_status">Status</string>
    <string name="property_expenses_seen">Seen</string>
    <string name="property_expenses_date_of_expense">Date of Expense</string>
    <string name="property_expenses_uploaded_files">Uploaded Files</string>
    <string name="property_expenses_payment_description_label">Expense Description:</string>
    <string name="property_expenses_property_name_label">Asset Nickname:</string>
    <string name="property_expenses_sender_type_label">Sender Type:</string>
    <string name="property_expenses_sender_name_label">Sender Name:</string>
    <string name="property_expenses_recipient_type_label">Recipient Type:</string>
    <string name="property_expenses_recipient_name_label">Recipient Name:</string>
    <string name="property_expenses_expense_type_label">Expense Type:</string>
    <string name="property_expenses_expense_method_label">Expense Method:</string>
    <string name="property_expenses_vendor_name_label">Vendor Name:</string>
    <string name="property_expenses_currency_label">Currency:</string>
    <string name="property_expenses_amount_label">Amount:</string>
    <string name="property_expenses_status_label">Status:</string>
    <string name="property_expenses_seen_label">Seen:</string>
    <string name="property_expenses_date_of_expense_label">Date of Expense:</string>
    <string name="property_expenses_uploaded_files_label">Uploaded Files:</string>
    <string name="add_property_tenure_contracts">Add Tenure Contracts</string>
    <string name="tenure_contracts_property_name">Asset Nickname</string>
    <string name="tenure_contracts_tenant_name">From Tenant</string>
    <string name="tenure_contracts_name">Contract Name</string>
    <string name="tenure_contracts_description">Contract Description</string>
    <string name="tenure_contracts_monthly_rental_amount">Monthly Rental Amount</string>
    <string name="tenure_contracts_monthly_rental_currency_iso">Monthly Rental Currency ISO</string>
    <string name="tenure_contracts_tenure_start_date">Tenure Start Date</string>
    <string name="add_property_error_name_empty">Asset name cannot be empty</string>
    <string name="add_property_error_unit_name_empty">Unit name cannot be empty</string>
    <string name="add_property_error_address_empty">Address cannot be empty</string>
    <string name="add_property_error_city_empty">City cannot be empty</string>
    <string name="add_property_error_postcode_empty">Postcode cannot be empty</string>
    <string name="add_property_error_state_empty">State cannot be empty</string>
    <string name="add_property_error_country_empty">Country cannot be empty</string>
</resources>