<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landlord.LandlordPropertyDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/landlordPropertyDetailToolbar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:elevation="@dimen/toolbar_elevation"
        android:background="@color/white"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/landlordPropertyDetailSaveButton"
        android:layout_marginStart="@dimen/min_group_margin"
        android:layout_marginEnd="@dimen/min_group_margin"
        android:layout_below="@id/landlordPropertyDetailToolbar"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailNameLabel"
            android:text="@string/property_name_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_field_gap_height"
            android:id="@+id/landlordPropertyDetailNameAlert"
            android:text="@string/add_property_error_name_empty"
            android:textColor="@color/alert_red"
            android:textSize="@dimen/input_field_alert_font_size"
            android:visibility="invisible"
            android:layout_toEndOf="@id/landlordPropertyDetailNameLabel"
            android:layout_marginStart="@dimen/min_group_margin"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailName"
            android:hint="@string/property_name"
            android:autofillHints=""
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailNameLabel"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailUnitNameLabel"
            android:text="@string/unit_name_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            android:layout_below="@id/landlordPropertyDetailName"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_field_gap_height"
            android:id="@+id/landlordPropertyDetailUnitNameAlert"
            android:text="@string/add_property_error_unit_name_empty"
            android:textColor="@color/alert_red"
            android:textSize="@dimen/input_field_alert_font_size"
            android:visibility="invisible"
            android:layout_toEndOf="@id/landlordPropertyDetailUnitNameLabel"
            android:layout_below="@id/landlordPropertyDetailName"
            android:layout_marginStart="@dimen/min_group_margin"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailUnitName"
            android:autofillHints=""
            android:hint="@string/unit_name"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailUnitNameLabel"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailFloorLabel"
            android:text="@string/floor_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            android:layout_below="@id/landlordPropertyDetailUnitName"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailFloor"
            android:autofillHints=""
            android:hint="@string/floor"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailFloorLabel"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailAddressLine1Label"
            android:text="@string/address_line_1_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            android:layout_below="@id/landlordPropertyDetailFloor"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_field_gap_height"
            android:id="@+id/landlordPropertyDetailAddressLine1Alert"
            android:text="@string/add_property_error_address_empty"
            android:textColor="@color/alert_red"
            android:textSize="@dimen/input_field_alert_font_size"
            android:visibility="invisible"
            android:layout_toEndOf="@id/landlordPropertyDetailAddressLine1Label"
            android:layout_below="@id/landlordPropertyDetailFloor"
            android:layout_marginStart="@dimen/min_group_margin"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailAddressLine1"
            android:autofillHints=""
            android:hint="@string/address_line_1"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailAddressLine1Label"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailAddressLine2Label"
            android:text="@string/address_line_2_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            android:layout_below="@id/landlordPropertyDetailAddressLine1"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailAddressLine2"
            android:autofillHints=""
            android:hint="@string/address_line_2"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailAddressLine2Label"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailCityLabel"
            android:text="@string/city_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            android:layout_below="@id/landlordPropertyDetailAddressLine2"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_field_gap_height"
            android:id="@+id/landlordPropertyDetailCityAlert"
            android:text="@string/add_property_error_city_empty"
            android:textColor="@color/alert_red"
            android:textSize="@dimen/input_field_alert_font_size"
            android:visibility="invisible"
            android:layout_toEndOf="@id/landlordPropertyDetailCityLabel"
            android:layout_below="@id/landlordPropertyDetailAddressLine2"
            android:layout_marginStart="@dimen/min_group_margin"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailCity"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailCityLabel"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailPostcodeLabel"
            android:text="@string/postcode_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            android:layout_below="@id/landlordPropertyDetailCity"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_field_gap_height"
            android:id="@+id/landlordPropertyDetailPostcodeAlert"
            android:text="@string/add_property_error_postcode_empty"
            android:textColor="@color/alert_red"
            android:textSize="@dimen/input_field_alert_font_size"
            android:visibility="invisible"
            android:layout_toEndOf="@id/landlordPropertyDetailPostcodeLabel"
            android:layout_below="@id/landlordPropertyDetailCity"
            android:layout_marginStart="@dimen/min_group_margin"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailPostcode"
            android:autofillHints=""
            android:hint="@string/postcode"
            android:inputType="number"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailPostcodeLabel"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailStateLabel"
            android:text="@string/state_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            android:layout_below="@id/landlordPropertyDetailPostcode"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_field_gap_height"
            android:id="@+id/landlordPropertyDetailStateAlert"
            android:text="@string/add_property_error_state_empty"
            android:textColor="@color/alert_red"
            android:textSize="@dimen/input_field_alert_font_size"
            android:visibility="invisible"
            android:layout_toEndOf="@id/landlordPropertyDetailStateLabel"
            android:layout_below="@id/landlordPropertyDetailPostcode"
            android:layout_marginStart="@dimen/min_group_margin"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailState"
            android:autofillHints=""
            android:hint="@string/state"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailStateLabel"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/landlordPropertyDetailCountryLabel"
            android:text="@string/country_label"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_font_size"
            android:layout_below="@id/landlordPropertyDetailState"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_field_gap_height"
            android:id="@+id/landlordPropertyDetailCountryAlert"
            android:text="@string/add_property_error_country_empty"
            android:textColor="@color/alert_red"
            android:textSize="@dimen/input_field_alert_font_size"
            android:visibility="invisible"
            android:layout_toEndOf="@id/landlordPropertyDetailCountryLabel"
            android:layout_below="@id/landlordPropertyDetailState"
            android:layout_marginStart="@dimen/min_group_margin"
            android:layout_marginTop="@dimen/input_field_gap_height"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:id="@+id/landlordPropertyDetailCountry"
            android:autofillHints=""
            android:hint="@string/country"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textSize="@dimen/input_field_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/disabled_grey"
            android:background="@drawable/edittext_background_state"
            android:layout_below="@id/landlordPropertyDetailCountryLabel"
            android:paddingStart="@dimen/input_field_gap_height"
            tools:ignore="RtlSymmetry"
            />

    </RelativeLayout>

    <android.widget.Button
        android:layout_width="@dimen/primary_button_width"
        android:layout_height="wrap_content"
        android:id="@+id/landlordPropertyDetailSaveButton"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_button_font_size"
        android:background="@drawable/primary_button_background_state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/group_gap_height"
        android:layout_marginBottom="@dimen/secondary_button_gap_height"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>